# py-ts-interfaces

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg
.github/workflows/: pythonpackage.yml
py2ts_interfaces/: __init__.py  parser.py  tests.py
py_ts_interfaces/: __init__.py  cli.py  parser.py  tests.py
py_ts_interfaces/tests/: tests.py  utils.py
stubs/astroid/: __init__.pyi  __pkginfo__.pyi  _ast.pyi  arguments.pyi  as_string.pyi  bases.pyi  builder.pyi  context.pyi  decorators.pyi  exceptions.pyi  helpers.pyi  inference.pyi  manager.pyi  mixins.pyi  modutils.pyi  node_classes.pyi  nodes.pyi  objects.pyi  protocols.pyi  raw_building.pyi  rebuilder.pyi  scoped_nodes.pyi  test_utils.pyi  transforms.pyi  util.pyi
stubs/astroid/interpreter/: __init__.pyi  dunder_lookup.pyi  objectmodel.pyi
stubs/astroid/interpreter/_import/: __init__.pyi  spec.pyi  util.pyi
