[tool.poetry]
name = 'py-ts-interfaces'
version = '0.3.0'
description = 'A library that converts Python dataclasses with type annotations to a TypeScript interface and serializes them to a file.'
license = 'MIT'
authors = [
    'Christopher Cordero <ccordero@protonmail.com>'
]
readme = 'README.md'
repository = 'https://github.com/cs-cordero/py-ts-interfaces'
homepage = 'https://github.com/cs-cordero/py-ts-interfaces'
documentation = 'https://github.com/cs-cordero/py-ts-interfaces'
keywords = ['python', 'typescript', 'interfaces']

[tool.poetry.dependencies]
python = '^3.7.2'
astroid = '2.12.2'

[tool.poetry.dev-dependencies]
black = '22.6.0'
flake8 = '4.0.1'
mypy = '0.971'
pytest-cov = '3.0.0'
pytest = "7.1.2"
isort = "5.10.1"
nox = "2022.1.7"
nox-poetry = "1.0.1"
typed-ast = { version = "1.5.4", python = "<3.8" }

[tool.poetry.scripts]
py-ts-interfaces = "py_ts_interfaces.cli:main"
